--- a/index.html
+++ b/index.html
@@ -4,18 +4,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const scene = document.querySelector('a-scene');
+        if (scene) {
+          scene.addEventListener('loaded', () => {
+            console.log('A-Frame scene loaded');
+          });
+          scene.addEventListener('arReady', (event) => {
+            console.log('MindAR is ready', event);
+          });
+          scene.addEventListener('arError', (event) => {
+            console.error('MindAR error', event);
+          });
+        }
+      });
+      // Play video when target is found
+      document.addEventListener('DOMContentLoaded', () => {
+        const scene = document.querySelector('a-scene');
+        scene.addEventListener('targetFound', () => {
+          const video = document.querySelector('#anim');
+          if (video) {
+            video.play();
+          }
+        });
+        scene.addEventListener('targetLost', () => {
+          const video = document.querySelector('#anim');
+          if (video) {
+            video.pause();
+            video.currentTime = 0;
+          }
+        });
+      });
+    </script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: ./assets/targets_v2.mind; color-space: sRGB; renderer: colorManagement: true, physicallyCorrectLights: true; vr-mode-ui: enabled: false; device-orientation-permission-ui: enabled: false">
       <a-assets>
         <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
-        <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
+        <video id="anim" src="./assets/animation.mp4" preload="auto" crossorigin="anonymous" loop="true" webkit-playsinline playsinline></video>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+        <a-video src="#anim" width="1" height="0.5625" position="0 0 0.1" rotation="0 0 0"></a-video>
       </a-entity>
     </a-scene>
   </body>
